syntax = "proto3";

option csharp_namespace = "GrpcGreeterServer";

package greet;

import "google/protobuf/empty.proto";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SendCollectionData (google.protobuf.Empty) returns (SampleCollection);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message SampleCollection {
  repeated string messages = 1;
}